# fdaa-proxy

./: .gitignore  Cargo.toml  DEPLOY_LOG.md  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt
bridge/: package-lock.json  package.json  server.js
config/: gateway.example.yaml
data/: dct_ledger.sqlite
docker/: Caddyfile  Dockerfile  Dockerfile.mcp  Dockerfile.openclaw  Dockerfile.proxy  Makefile  ada-proxy.yml  docker-compose.yaml  docker-compose.yml  jaeger-stack.yml  mcp-stack.yml  sidecar.yml  towerhq-stack-v2-test.yml  towerhq-stack-v2.yml  towerhq-stack.yml  towerhq-staging-stack.yml  verify-stack.yml
examples/: .env.example  README.md  verify-cia.py
examples/autogen/: README.md  agent.py  requirements.txt
examples/langgraph/: README.md  agent.py  requirements.txt
examples/pydantic-ai/: README.md  agent.py  requirements.txt
fdaa_proxy/: __init__.py  anthropic_proxy.py  cli.py  config.py  governance.py  server.py
fdaa_proxy/acc/: __init__.py  crypto.py  validator.py
fdaa_proxy/agents/: __init__.py  models.py  registry.py  routes.py  storage.py
fdaa_proxy/dct/: __init__.py  logger.py
fdaa_proxy/llm/: __init__.py  proxy.py
fdaa_proxy/mcp/: __init__.py  client.py  gateway.py  policy.py
fdaa_proxy/openclaw/: __init__.py  protocol.py  provisioner.py  proxy.py
fdaa_proxy/pool/: __init__.py  manager.py
fdaa_proxy/ril/: __init__.py  cia.py  ledger.py  ledger_v2.py  middleware.py  promotion.py  triggers.py
fdaa_proxy/safemode/: __init__.py  snapshot.py
fdaa_proxy/telemetry/: __init__.py  spans.py  tracer.py
fdaa_proxy/verify/: __init__.py  app.py
scripts/: deploy-staging.sh  promote.sh  rollback.sh  spin-up.sh  test-registry-api.sh
src/: __init__.py  config.rs  dct.rs  main.rs  proxy.rs
src/adapters/: __init__.py  context_integrity.py
substr8/: __init__.py  cli.py  cli.py.new  governance.py  init.py
substr8/acc/: __init__.py  check.py
substr8/agent/: __init__.py  cli.py  hash.py  manifest.py  registry.py
substr8/dct/: __init__.py  cli.py  ledger.py
substr8/dev/: cli.py
substr8/fdaa/: __init__.py  agent.py  cli.py  cli_mcp.py  database.py  dct.py  gateway_service.py  guard.py  provision.py  registry.py  registry_client.py  server.py  templates.py
substr8/fdaa/mcp/: __init__.py  client.py  gateway.py  policy.py
substr8/fdaa/sandbox/: __init__.py  executor.py  seccomp_profile.json
substr8/fdaa/telemetry/: __init__.py  exporter.py  instrumented_pipeline.py  tracer.py
substr8/gam/: __init__.py  api.py  autocommit.py  branches.py  cli.py  core.py  embeddings.py  identity.py  index.py  permissions.py  proposals.py  sparse.py
substr8/gam/api/: __init__.py  main.py
substr8/gam/db/: __init__.py  client.py  migrate.py  schema.sql
substr8/gateway/: __init__.py  cli.py
substr8/harness/: __init__.py  cli.py
substr8/integrations/: __init__.py  crewai.py  dspy.py  generic.py  langgraph.py
substr8/mcp/: __init__.py  __main__.py  cli.py  server.py
substr8/memory/: __init__.py  cli.py
substr8/platform/: __init__.py  cli.py
substr8/platform/templates/: docker-compose.yml
substr8/platform_v2/: __init__.py  cli.py
substr8/proof/: __init__.py  cli.py
substr8/registry/: __init__.py  cli.py
substr8/ril/: __init__.py  cli.py
substr8/runproof/: __init__.py  bundle.py  cli.py  hash.py  verify.py
substr8/sandbox/: __init__.py  cli.py
substr8/schemas/: __init__.py  acc_policy.py  dct_entry.py  manifest.py  tower_v1.py
substr8/threadhq/: __init__.py  cli.py
systemd/: fdaa-anthropic-proxy.service  fdaa-proxy.service
tests/: __init__.py  test_agent_registry.py  test_context_integrity.py  test_dct.py  test_policy.py  test_ril_v2.py
tests/mcp/: test_critical.py  test_integration.py
tests/platform_cli/: test_cli.py  test_integration.py
tests/provisioner/: test_framework.md  test_lifecycle.py
