[project]
name = "fdaa-proxy"
version = "0.2.3"
description = "Federated Decentralized AI Architecture Proxy"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "click>=8.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "websockets>=12.0",
    "httpx>=0.24.0",
    "rich>=13.0",
    "starlette>=0.27.0",
]

[project.scripts]
fdaa-proxy = "fdaa_proxy.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
